add rules to BaseGame